--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.1",
     "react-simple-captcha": "^9.3.1",
+    "react-tabs": "^6.1.0",
     "react-toastify": "^11.0.3",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.15.10",
